--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="C:\Users\girup\Downloads\naan mudhalvan\passport.jpeg" alt="Your Profile Picture" class="profile-picture">
+            <img src="passport.jpeg" alt="Your Profile Picture" class="profile-picture">
             <h1>girupa shankar K</h1>
-            <p>Am computer science</p>
+            <p>Am computer science student</p>
         </div>
     </header>
 
@@ -136,8 +136,8 @@
         <div class="section-content">
             <h2>Skills</h2>
             <ul>
-                <li>IOT</li>
-                <li>SQL</li>
+                <li>dbms</li>
+                <li>c</li>
                 <li>MS EXCEL</li>
                 <li>Python</li>
                 <li>MS WORD</li>
@@ -163,7 +163,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="C:\Users\girup\Downloads\naan mudhalvan\resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
@@ -173,7 +173,7 @@
         <div class="section-content">
             <center>
             <h2>certificate</h2>
-            <a href="C:\Users\girup\Downloads\naan mudhalvan\certificate.jpeg" target="_blank" class="download-button">Download CV</a>
+            <a href="certificate.jpeg" target="_blank" class="download-button">Download certificate</a>
         </center>
         </div>
     <footer>
